chechlist first step
