# Grundgerüst einer Single Page App mit REST-Backend/Backend/src/controller/root.controller.js
@@ -40,6 +40,11 @@ export default class RootController {
                 _naem: "wish",
                 query: {url: "wish", method: "GET", query_params: ["search", "title", "author", "description", "place", "time"]},
                 create: {url: "/wish", method: "POST"}
+            },
+            {
+                _neam: "check",
+                query: {url: "check", method: "GET", query_params: ["search", "title", "author", "description", "place", "time"]},
+                create: {url: "/check", method: "POST"}
             }
         ]);
 
